force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/leaseworks__Payment_on_Account_Line__c.object-meta.xml
<CustomObject>
    <label>Payment on Account</label>
    <nameField>
        <displayFormat>PMTACCT-{000000}</displayFormat>
        <label>Payment on Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments on Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>