force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/fields/leaseworks__Amount_Applied__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Applied__c</fullName>
    <inlineHelpText>Indicates the total amount currently applied to invoices.</inlineHelpText>
    <label>Amount Applied</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>