force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/fields/leaseworks__Balance_Available__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Balance_Available__c</fullName>
    <formula>IF( OR(ISPICKVAL(leaseworks__Status__c,&apos;Declined&apos;),ISPICKVAL(leaseworks__Status__c,&apos;Cancelled&apos;)),0, leaseworks__Payment_on_Account_Amount__c  -  leaseworks__Amount_Applied__c -  leaseworks__Amount_Refunded__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining balance available on this Payment on Account after offsets and refunds.</inlineHelpText>
    <label>Balance Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>