force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/fields/leaseworks__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Displays the associated Bank Account</description>
    <label>Bank Account</label>
    <referenceTo>leaseworks__Bank_Account__c</referenceTo>
    <relationshipLabel>Payment on Account</relationshipLabel>
    <relationshipName>Payments_on_Account_Line</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>