force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/fields/leaseworks__Date_Received__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Received__c</fullName>
    <description>Displays the date the payment was received.</description>
    <label>Date Received</label>
    <required>true</required>
    <type>Date</type>
</CustomField>