force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/fields/leaseworks__Message__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Message__c</fullName>
    <description>This field is used in undo Cancellation quick action</description>
    <formula>&quot;This action can only be performed on records in Cancelled-Pending status.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message</label>
    <type>Text</type>
</CustomField>