force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Displays the associated operator link</description>
    <label>Z_Unused_OP Lessee</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Payment on Account</relationshipLabel>
    <relationshipName>Payments_on_Account_Line</relationshipName>
    <type>Lookup</type>
</CustomField>