force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/fields/leaseworks__Payment_on_Account_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_on_Account_Amount__c</fullName>
    <description>Displays any payment amount that&#39;s not matched to a specific invoice.</description>
    <label>Payment on Account Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>