force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/validationRules/leaseworks__Entity_Is_InActive.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Entity_Is_InActive</fullName>
    <active>true</active>
    <description>To Check Entity is Inactive when Payment On Account is Created.</description>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
ISNEW(),
     NOT(ISBLANK(leaseworks__Cash_Unapplied_From__c)) ,
 leaseworks__Global_Accounting_Setting__r.leaseworks__Accounting_ON__c ,
 leaseworks__Entity__r.leaseworks__Inactive__c 
)</errorConditionFormula>
    <errorMessage>Unable to proceed with transactions: The payment is currently associated with an inactive entity. Please link an active entity to the payment to continue.</errorMessage>
</ValidationRule>