force-app/main/default/objects/leaseworks__Payment_on_Account_Line__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>leaseworks__Operator_New__c</columns>
    <columns>leaseworks__Payment_on_Account_Amount__c</columns>
    <columns>leaseworks__Payment_on_Account_Amount_Formula__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>